--- a/Task 1/style.css
+++ b/Task 1/style.css
@@ -3,8 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
 
 /* Mobile first */
@@ -52,6 +51,16 @@ form {
   color: #fff;
 }
 
+#output {
+  margin: 50px auto;
+  max-width: 80%;
+}
+
+#output > h2 {
+  padding-bottom: 10px;
+  text-align: center;
+}
+
 /* Tablet */
 @media screen and (min-width: 768px) {
   .headline {
@@ -62,4 +71,8 @@ form {
   #submit-btn {
     font-size: 2em;
   }
+}
+
+#output > h2 {
+  font-size: 2em;
 }
