--- a/Task 4/style.css
+++ b/Task 4/style.css
@@ -3,8 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
 
 /* Mobile first */
@@ -26,4 +25,23 @@
 .container h1 {
   margin-top: 50px;
   color: #333;
+}
+
+#output {
+  align-items: flex-start;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.car-card {
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 200px;
+  width: 500px;
+}
+
+.models {
+  max-width: 100%;
 }
