--- a/Task 4/style.css
+++ b/Task 4/style.css
@@ -31,6 +31,8 @@
   align-items: flex-start;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 20px;
 }
 
 .car-card {
@@ -39,9 +41,12 @@
   flex-direction: column;
   flex-wrap: wrap;
   height: 200px;
-  width: 500px;
+  padding: 5px;
+  width: 670px;
 }
 
-.models {
-  max-width: 100%;
+.brand {
+  font-size: 25px;
+  padding-bottom: 10px;
+  padding-top: 10px;
 }
